Backport image improvements 5.1.6 (#36210)
This backports the fixes from #23384

---------

Co-authored-by: daniel.solis <daniel.solis@dotcms.com>
Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>